--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>CSS Calculator</title>
   <style>
     body {
-      background: url('assets/12.avif') no-repeat center center fixed;
+      background: url('12.avif') no-repeat center center fixed;
       background-size: cover;
       display: flex;
       justify-content: center;
@@ -149,4 +149,5 @@
   </script>
 </body>
 </html>
+
 
